Fixed incorrect height calculation for hero under navbar with is-spaced.
Added a new class is-fullheight-with-spaced-navbar to hero element.

Signed-off-by: Finn Rayment <finn@rayment.fr>

--- a/sass/layout/hero.sass
+++ b/sass/layout/hero.sass
@@ -94,6 +94,7 @@ $hero-colors: $colors !default
   &.is-halfheight,
   &.is-fullheight,
   &.is-fullheight-with-navbar
+  &.is-fullheight-with-spaced-navbar
     .hero-body
       align-items: center
       display: flex
