Documented hero changes.
Signed-off-by: Finn Rayment <finn@rayment.fr>

--- a/docs/documentation/layout/hero.html
+++ b/docs/documentation/layout/hero.html
@@ -183,6 +183,9 @@ meta:
   <p>
     If you are using a <a href="{{ site.url }}/documentation/components/navbar/#fixed-navbar">fixed navbar</a>, you can use the <code>is-fullheight-with-navbar</code> modifier on the hero for it to occupy the viewport height minus the navbar height.
   </p>
+  <p>
+    If the navbar contains the <code>is-spaced</code> modifier, you should use <code>is-fullheight-with-spaced-navbar</code> instead as this will account for the extra vertical spacing.
+  </p>
 </div>
 
 
