--- a/docs/_includes/index/hello.html
+++ b/docs/_includes/index/hello.html
@@ -58,7 +58,7 @@
       </div>
 
       <p class="bd-hello-author">
-        <span>Video by <a href="http://www.vuemastery.com/" target="_blank">Vue Mastery</a></span>
+        <span>Video by <a href="https://www.vuemastery.com/" target="_blank">Vue Mastery</a></span>
       </p>
     </div>
   </div>
