--- a/docs/_includes/index/intro.html
+++ b/docs/_includes/index/intro.html
@@ -45,7 +45,7 @@
             </div>
           </div>
           <p class="intro-author">
-            <span>Video by <a href="http://www.vuemastery.com/" target="_blank">Vue Mastery</a></span>
+            <span>Video by <a href="https://www.vuemastery.com/" target="_blank">Vue Mastery</a></span>
           </p>
         </div>
       </div>
