--- a/docs/documentation/components/nav.html
+++ b/docs/documentation/components/nav.html
@@ -45,7 +45,7 @@ doc-subtab: nav
       </p>
       <ul>
         <li><code>nav-toggle</code> for the hamburger menu on mobile</li>
-        <li><code>nav-menu</code> for menu that is collapsable on mobile (you can combine it with <code>nav-right</code>)</li>
+        <li><code>nav-menu</code> for menu that is collapsible on mobile (you can combine it with <code>nav-right</code>)</li>
         <li>toggle <code>is-active</code> on <code>nav-toggle</code> and <code>nav-menu</code> when <code>nav-toggle</code> was clicked</li>
       </ul>
     </div>
