--- a/sass/layout/hero.sass
+++ b/sass/layout/hero.sass
@@ -93,7 +93,7 @@ $hero-colors: $colors !default
         padding: $hero-body-padding-large
   &.is-halfheight,
   &.is-fullheight,
-  &.is-fullheight-with-navbar
+  &.is-fullheight-with-navbar,
   &.is-fullheight-with-spaced-navbar
     .hero-body
       align-items: center
