--- a/sass/form/tools.sass
+++ b/sass/form/tools.sass
@@ -19,6 +19,8 @@ $label-colors: $form-colors !default
     font-size: $size-medium
   &.is-large
     font-size: $size-large
+  &[for]
+    cursor: pointer
 
 .help
   display: block
