feat: improve rtl support

--- a/sass/components/breadcrumb.sass
+++ b/sass/components/breadcrumb.sass
@@ -26,7 +26,7 @@ $breadcrumb-item-separator-color: $border-hover !default
     align-items: center
     display: flex
     &:first-child a
-      +ltr-property("padding", 0, false)
+      padding-inline-start: 0
     &.is-active
       a
         color: $breadcrumb-item-active-color
@@ -43,9 +43,9 @@ $breadcrumb-item-separator-color: $border-hover !default
     justify-content: flex-start
   .icon
     &:first-child
-      +ltr-property("margin", 0.5em)
+      margin-inline-end: 0.5em
     &:last-child
-      +ltr-property("margin", 0.5em, false)
+      margin-inline-start: 0.5em
   // Alignment
   &.is-centered
     ol,
