--- a/sass/components/card.sass
+++ b/sass/components/card.sass
@@ -94,7 +94,7 @@ $card-media-margin: $block-spacing !default
   justify-content: center
   padding: $card-footer-padding
   &:not(:last-child)
-    +ltr-property("border", $card-footer-border-top)
+    border-inline-end-width: $card-footer-border-top
 
 // Combinations
 
