--- a/sass/components/media.sass
+++ b/sass/components/media.sass
@@ -43,10 +43,10 @@ $media-level-2-spacing: 0.5rem !default
   flex-shrink: 0
 
 .media-left
-  +ltr-property("margin", $media-spacing)
+  margin-inline-end: $media-spacing
 
 .media-right
-  +ltr-property("margin", $media-spacing, false)
+  margin-inline-start: $media-spacing
 
 .media-content
   flex-basis: auto
