--- a/sass/components/message.sass
+++ b/sass/components/message.sass
@@ -81,7 +81,7 @@ $message-colors: $colors !default
   .delete
     flex-grow: 0
     flex-shrink: 0
-    +ltr-property("margin", 0.75em, false)
+    margin-inline-start: 0.75em
   & + .message-body
     border-width: $message-header-body-border-width
     border-top-left-radius: 0
