--- a/sass/components/modal.sass
+++ b/sass/components/modal.sass
@@ -67,7 +67,7 @@ $modal-breakpoint: $tablet !default
   background: none
   height: $modal-close-dimensions
   position: fixed
-  +ltr-position($modal-close-right)
+  inset-inline-end: $modal-close-right
   top: $modal-close-top
   width: $modal-close-dimensions
 
@@ -106,7 +106,7 @@ $modal-breakpoint: $tablet !default
   border-top: $modal-card-foot-border-top
   .button
     &:not(:last-child)
-      +ltr-property("margin", 0.5em)
+      margin-inline-end: 0.5em
 
 .modal-card-body
   +overflow-touch
