--- a/sass/components/navbar.sass
+++ b/sass/components/navbar.sass
@@ -156,7 +156,7 @@ body
   @extend %reset
   color: $navbar-burger-color
   +hamburger($navbar-height)
-  +ltr-property("margin", auto, false)
+  margin-inline-start: auto
 
 .navbar-menu
   display: none
@@ -214,12 +214,12 @@ a.navbar-item,
   flex-shrink: 1
 
 .navbar-link:not(.is-arrowless)
-  +ltr-property("padding", 2.5em)
+  padding-inline-end: 2.5em
   &::after
     @extend %arrow
     border-color: $navbar-dropdown-arrow
     margin-top: -0.375em
-    +ltr-position(1.125em)
+    inset-inline-end: 1.125em
 
 .navbar-dropdown
   font-size: 0.875rem
@@ -352,10 +352,10 @@ a.navbar-item,
     flex-shrink: 0
   .navbar-start
     justify-content: flex-start
-    +ltr-property("margin", auto)
+    margin-inline-end: auto
   .navbar-end
     justify-content: flex-end
-    +ltr-property("margin", auto, false)
+    margin-inline-start: auto
   .navbar-dropdown
     background-color: $navbar-dropdown-background-color
     border-bottom-left-radius: $navbar-dropdown-radius
@@ -364,7 +364,7 @@ a.navbar-item,
     box-shadow: 0 8px 8px bulmaRgba($scheme-invert, 0.1)
     display: none
     font-size: 0.875rem
-    +ltr-position(0, false)
+    inset-inline-start: 0
     min-width: 100%
     position: absolute
     top: 100%
@@ -373,7 +373,7 @@ a.navbar-item,
       padding: 0.375rem 1rem
       white-space: nowrap
     a.navbar-item
-      +ltr-property("padding", 3rem)
+      padding-inline-end: 3rem
       &:focus,
       &:hover
         background-color: $navbar-dropdown-item-hover-background-color
@@ -401,9 +401,9 @@ a.navbar-item,
   .navbar > .container,
   .container > .navbar
     .navbar-brand
-      +ltr-property("margin", -.75rem, false)
+      margin-inline-start: -.75rem
     .navbar-menu
-      +ltr-property("margin", -.75rem)
+      margin-inline-end: -.75rem
   // Fixed navbar
   .navbar
     &.is-fixed-bottom-desktop,
