--- a/sass/components/panel.sass
+++ b/sass/components/panel.sass
@@ -90,7 +90,7 @@ $panel-colors: $colors !default
   justify-content: flex-start
   padding: 0.5em 0.75em
   input[type="checkbox"]
-    +ltr-property("margin", 0.75em)
+    margin-inline-end: 0.75em
   & > .control
     flex-grow: 1
     flex-shrink: 1
@@ -115,7 +115,7 @@ label.panel-block
 .panel-icon
   +fa(14px, 1em)
   color: $panel-icon-color
-  +ltr-property("margin", 0.75em)
+  margin-inline-end: 0.75em
   .fa
     font-size: inherit
     line-height: inherit
