--- a/sass/elements/content.sass
+++ b/sass/elements/content.sass
@@ -72,11 +72,11 @@ $content-table-foot-cell-color: $text-strong !default
     margin-bottom: 1em
   blockquote
     background-color: $content-blockquote-background-color
-    +ltr-property("border", $content-blockquote-border-left, false)
+    border-inline-start-width: $content-blockquote-border-left
     padding: $content-blockquote-padding
   ol
     list-style-position: outside
-    +ltr-property("margin", 2em, false)
+    margin-inline-start: 2em
     margin-top: 1em
     &:not([type])
       list-style-type: decimal
@@ -90,7 +90,7 @@ $content-table-foot-cell-color: $text-strong !default
         list-style-type: upper-roman
   ul
     list-style: disc outside
-    +ltr-property("margin", 2em, false)
+    margin-inline-start: 2em
     margin-top: 1em
     ul
       list-style-type: circle
@@ -98,7 +98,7 @@ $content-table-foot-cell-color: $text-strong !default
       ul
         list-style-type: square
   dd
-    +ltr-property("margin", 2em, false)
+    margin-inline-start: 2em
   figure
     margin-left: 2em
     margin-right: 2em
