--- a/sass/form/file.sass
+++ b/sass/form/file.sass
@@ -178,7 +178,7 @@ $file-colors: $form-colors !default
   display: flex
   height: 1em
   justify-content: center
-  +ltr-property("margin", 0.5em)
+  margin-inline-end: 0.5em
   width: 1em
   .fa
     font-size: 14px
