--- a/sass/form/select.sass
+++ b/sass/form/select.sass
@@ -11,12 +11,12 @@ $select-colors: $form-colors !default
     &::after
       @extend %arrow
       border-color: $input-arrow
-      +ltr-position(1.125em)
+      inset-inline-end: 1.125em
       z-index: 4
   &.is-rounded
     select
       border-radius: $radius-rounded
-      +ltr-property("padding", 1em, false)
+      padding-inline-start: 1em
   select
     @extend %input
     cursor: pointer
@@ -30,7 +30,7 @@ $select-colors: $form-colors !default
     fieldset[disabled] &:hover
       border-color: $input-disabled-border-color
     &:not([multiple])
-      +ltr-property("padding", 2.5em)
+      padding-inline-end: 2.5em
     &[multiple]
       height: auto
       padding: 0
@@ -77,7 +77,7 @@ $select-colors: $form-colors !default
       @extend %loader
       margin-top: 0
       position: absolute
-      +ltr-position(0.625em)
+      inset-inline-end: 0.625em
       top: 0.625em
       transform: none
     &.is-small:after
