--- a/sass/grid/columns.sass
+++ b/sass/grid/columns.sass
@@ -42,29 +42,29 @@ $column-gap: 0.75rem !default
     flex: none
     width: 80%
   .columns.is-mobile > &.is-offset-three-quarters
-    +ltr-property("margin", 75%, false)
+    margin-inline-start: 75%
   .columns.is-mobile > &.is-offset-two-thirds
-    +ltr-property("margin", 66.6666%, false)
+    margin-inline-start: 66.6666%
   .columns.is-mobile > &.is-offset-half
-    +ltr-property("margin", 50%, false)
+    margin-inline-start: 50%
   .columns.is-mobile > &.is-offset-one-third
-    +ltr-property("margin", 33.3333%, false)
+    margin-inline-start: 33.3333%
   .columns.is-mobile > &.is-offset-one-quarter
-    +ltr-property("margin", 25%, false)
+    margin-inline-start: 25%
   .columns.is-mobile > &.is-offset-one-fifth
-    +ltr-property("margin", 20%, false)
+    margin-inline-start: 20%
   .columns.is-mobile > &.is-offset-two-fifths
-    +ltr-property("margin", 40%, false)
+    margin-inline-start: 40%
   .columns.is-mobile > &.is-offset-three-fifths
-    +ltr-property("margin", 60%, false)
+    margin-inline-start: 60%
   .columns.is-mobile > &.is-offset-four-fifths
-    +ltr-property("margin", 80%, false)
+    margin-inline-start: 80%
   @for $i from 0 through 12
     .columns.is-mobile > &.is-#{$i}
       flex: none
       width: percentage(divide($i, 12))
     .columns.is-mobile > &.is-offset-#{$i}
-      +ltr-property("margin", percentage(divide($i, 12)), false)
+      margin-inline-start: percentage(divide($i, 12))
   +mobile
     &.is-narrow-mobile
       flex: none
@@ -100,29 +100,29 @@ $column-gap: 0.75rem !default
       flex: none
       width: 80%
     &.is-offset-three-quarters-mobile
-      +ltr-property("margin", 75%, false)
+      margin-inline-start: 75%
     &.is-offset-two-thirds-mobile
-      +ltr-property("margin", 66.6666%, false)
+      margin-inline-start: 66.6666%
     &.is-offset-half-mobile
-      +ltr-property("margin", 50%, false)
+      margin-inline-start: 50%
     &.is-offset-one-third-mobile
-      +ltr-property("margin", 33.3333%, false)
+      margin-inline-start: 33.3333%
     &.is-offset-one-quarter-mobile
-      +ltr-property("margin", 25%, false)
+      margin-inline-start: 25%
     &.is-offset-one-fifth-mobile
-      +ltr-property("margin", 20%, false)
+      margin-inline-start: 20%
     &.is-offset-two-fifths-mobile
-      +ltr-property("margin", 40%, false)
+      margin-inline-start: 40%
     &.is-offset-three-fifths-mobile
-      +ltr-property("margin", 60%, false)
+      margin-inline-start: 60%
     &.is-offset-four-fifths-mobile
-      +ltr-property("margin", 80%, false)
+      margin-inline-start: 80%
     @for $i from 0 through 12
       &.is-#{$i}-mobile
         flex: none
         width: percentage(divide($i, 12))
       &.is-offset-#{$i}-mobile
-        +ltr-property("margin", percentage(divide($i, 12)), false)
+        margin-inline-start: percentage(divide($i, 12))
   +tablet
     &.is-narrow,
     &.is-narrow-tablet
@@ -170,31 +170,31 @@ $column-gap: 0.75rem !default
       width: 80%
     &.is-offset-three-quarters,
     &.is-offset-three-quarters-tablet
-      +ltr-property("margin", 75%, false)
+      margin-inline-start: 75%
     &.is-offset-two-thirds,
     &.is-offset-two-thirds-tablet
-      +ltr-property("margin", 66.6666%, false)
+      margin-inline-start: 66.6666%
     &.is-offset-half,
     &.is-offset-half-tablet
-      +ltr-property("margin", 50%, false)
+      margin-inline-start: 50%
     &.is-offset-one-third,
     &.is-offset-one-third-tablet
-      +ltr-property("margin", 33.3333%, false)
+      margin-inline-start: 33.3333%
     &.is-offset-one-quarter,
     &.is-offset-one-quarter-tablet
-      +ltr-property("margin", 25%, false)
+      margin-inline-start: 25%
     &.is-offset-one-fifth,
     &.is-offset-one-fifth-tablet
-      +ltr-property("margin", 20%, false)
+      margin-inline-start: 20%
     &.is-offset-two-fifths,
     &.is-offset-two-fifths-tablet
-      +ltr-property("margin", 40%, false)
+      margin-inline-start: 40%
     &.is-offset-three-fifths,
     &.is-offset-three-fifths-tablet
-      +ltr-property("margin", 60%, false)
+      margin-inline-start: 60%
     &.is-offset-four-fifths,
     &.is-offset-four-fifths-tablet
-      +ltr-property("margin", 80%, false)
+      margin-inline-start: 80%
     @for $i from 0 through 12
       &.is-#{$i},
       &.is-#{$i}-tablet
@@ -202,7 +202,7 @@ $column-gap: 0.75rem !default
         width: percentage(divide($i, 12))
       &.is-offset-#{$i},
       &.is-offset-#{$i}-tablet
-        +ltr-property("margin", percentage(divide($i, 12)), false)
+        margin-inline-start: percentage(divide($i, 12))
   +touch
     &.is-narrow-touch
       flex: none
@@ -238,29 +238,29 @@ $column-gap: 0.75rem !default
       flex: none
       width: 80%
     &.is-offset-three-quarters-touch
-      +ltr-property("margin", 75%, false)
+      margin-inline-start: 75%
     &.is-offset-two-thirds-touch
-      +ltr-property("margin", 66.6666%, false)
+      margin-inline-start: 66.6666%
     &.is-offset-half-touch
-      +ltr-property("margin", 50%, false)
+      margin-inline-start: 50%
     &.is-offset-one-third-touch
-      +ltr-property("margin", 33.3333%, false)
+      margin-inline-start: 33.3333%
     &.is-offset-one-quarter-touch
-      +ltr-property("margin", 25%, false)
+      margin-inline-start: 25%
     &.is-offset-one-fifth-touch
-      +ltr-property("margin", 20%, false)
+      margin-inline-start: 20%
     &.is-offset-two-fifths-touch
-      +ltr-property("margin", 40%, false)
+      margin-inline-start: 40%
     &.is-offset-three-fifths-touch
-      +ltr-property("margin", 60%, false)
+      margin-inline-start: 60%
     &.is-offset-four-fifths-touch
-      +ltr-property("margin", 80%, false)
+      margin-inline-start: 80%
     @for $i from 0 through 12
       &.is-#{$i}-touch
         flex: none
         width: percentage(divide($i, 12))
       &.is-offset-#{$i}-touch
-        +ltr-property("margin", percentage(divide($i, 12)), false)
+        margin-inline-start: percentage(divide($i, 12))
   +desktop
     &.is-narrow-desktop
       flex: none
@@ -296,29 +296,29 @@ $column-gap: 0.75rem !default
       flex: none
       width: 80%
     &.is-offset-three-quarters-desktop
-      +ltr-property("margin", 75%, false)
+      margin-inline-start: 75%
     &.is-offset-two-thirds-desktop
-      +ltr-property("margin", 66.6666%, false)
+      margin-inline-start: 66.6666%
     &.is-offset-half-desktop
-      +ltr-property("margin", 50%, false)
+      margin-inline-start: 50%
     &.is-offset-one-third-desktop
-      +ltr-property("margin", 33.3333%, false)
+      margin-inline-start: 33.3333%
     &.is-offset-one-quarter-desktop
-      +ltr-property("margin", 25%, false)
+      margin-inline-start: 25%
     &.is-offset-one-fifth-desktop
-      +ltr-property("margin", 20%, false)
+      margin-inline-start: 20%
     &.is-offset-two-fifths-desktop
-      +ltr-property("margin", 40%, false)
+      margin-inline-start: 40%
     &.is-offset-three-fifths-desktop
-      +ltr-property("margin", 60%, false)
+      margin-inline-start: 60%
     &.is-offset-four-fifths-desktop
-      +ltr-property("margin", 80%, false)
+      margin-inline-start: 80%
     @for $i from 0 through 12
       &.is-#{$i}-desktop
         flex: none
         width: percentage(divide($i, 12))
       &.is-offset-#{$i}-desktop
-        +ltr-property("margin", percentage(divide($i, 12)), false)
+        margin-inline-start: percentage(divide($i, 12))
   +widescreen
     &.is-narrow-widescreen
       flex: none
@@ -354,29 +354,29 @@ $column-gap: 0.75rem !default
       flex: none
       width: 80%
     &.is-offset-three-quarters-widescreen
-      +ltr-property("margin", 75%, false)
+      margin-inline-start: 75%
     &.is-offset-two-thirds-widescreen
-      +ltr-property("margin", 66.6666%, false)
+      margin-inline-start: 66.6666%
     &.is-offset-half-widescreen
-      +ltr-property("margin", 50%, false)
+      margin-inline-start: 50%
     &.is-offset-one-third-widescreen
-      +ltr-property("margin", 33.3333%, false)
+      margin-inline-start: 33.3333%
     &.is-offset-one-quarter-widescreen
-      +ltr-property("margin", 25%, false)
+      margin-inline-start: 25%
     &.is-offset-one-fifth-widescreen
-      +ltr-property("margin", 20%, false)
+      margin-inline-start: 20%
     &.is-offset-two-fifths-widescreen
-      +ltr-property("margin", 40%, false)
+      margin-inline-start: 40%
     &.is-offset-three-fifths-widescreen
-      +ltr-property("margin", 60%, false)
+      margin-inline-start: 60%
     &.is-offset-four-fifths-widescreen
-      +ltr-property("margin", 80%, false)
+      margin-inline-start: 80%
     @for $i from 0 through 12
       &.is-#{$i}-widescreen
         flex: none
         width: percentage(divide($i, 12))
       &.is-offset-#{$i}-widescreen
-        +ltr-property("margin", percentage(divide($i, 12)), false)
+        margin-inline-start: percentage(divide($i, 12))
   +fullhd
     &.is-narrow-fullhd
       flex: none
@@ -412,33 +412,33 @@ $column-gap: 0.75rem !default
       flex: none
       width: 80%
     &.is-offset-three-quarters-fullhd
-      +ltr-property("margin", 75%, false)
+      margin-inline-start: 75%
     &.is-offset-two-thirds-fullhd
-      +ltr-property("margin", 66.6666%, false)
+      margin-inline-start: 66.6666%
     &.is-offset-half-fullhd
-      +ltr-property("margin", 50%, false)
+      margin-inline-start: 50%
     &.is-offset-one-third-fullhd
-      +ltr-property("margin", 33.3333%, false)
+      margin-inline-start: 33.3333%
     &.is-offset-one-quarter-fullhd
-      +ltr-property("margin", 25%, false)
+      margin-inline-start: 25%
     &.is-offset-one-fifth-fullhd
-      +ltr-property("margin", 20%, false)
+      margin-inline-start: 20%
     &.is-offset-two-fifths-fullhd
-      +ltr-property("margin", 40%, false)
+      margin-inline-start: 40%
     &.is-offset-three-fifths-fullhd
-      +ltr-property("margin", 60%, false)
+      margin-inline-start: 60%
     &.is-offset-four-fifths-fullhd
-      +ltr-property("margin", 80%, false)
+      margin-inline-start: 80%
     @for $i from 0 through 12
       &.is-#{$i}-fullhd
         flex: none
         width: percentage(divide($i, 12))
       &.is-offset-#{$i}-fullhd
-        +ltr-property("margin", percentage(divide($i, 12)), false)
+        margin-inline-start: percentage(divide($i, 12))
 
 .columns
-  +ltr-property("margin", (-$column-gap), false)
-  +ltr-property("margin", (-$column-gap))
+  margin-inline-start: (-$column-gap)
+  margin-inline-end: (-$column-gap)
   margin-top: (-$column-gap)
   &:last-child
     margin-bottom: (-$column-gap)
@@ -448,8 +448,8 @@ $column-gap: 0.75rem !default
   &.is-centered
     justify-content: center
   &.is-gapless
-    +ltr-property("margin", 0, false)
-    +ltr-property("margin", 0)
+    margin-inline-start: 0
+    margin-inline-end: 0
     margin-top: 0
     & > .column
       margin: 0
@@ -476,8 +476,8 @@ $column-gap: 0.75rem !default
 @if $variable-columns
   .columns.is-variable
     --columnGap: 0.75rem
-    +ltr-property("margin", calc(-1 * var(--columnGap)), false)
-    +ltr-property("margin", calc(-1 * var(--columnGap)))
+    margin-inline-start: calc(-1 * var(--columnGap))
+    margin-inline-end: calc(-1 * var(--columnGap))
     > .column
       padding-left: var(--columnGap)
       padding-right: var(--columnGap)
