--- a/sass/components/dropdown.sass
+++ b/sass/components/dropdown.sass
@@ -40,7 +40,7 @@ $dropdown-divider-background-color: $border-light !default
 
 .dropdown-menu
   display: none
-  +ltr-position(0, false)
+  inset-inline-start: 0
   min-width: $dropdown-menu-min-width
   padding-top: $dropdown-content-offset
   position: absolute
@@ -64,7 +64,7 @@ $dropdown-divider-background-color: $border-light !default
 
 a.dropdown-item,
 button.dropdown-item
-  +ltr-property("padding", 3rem)
+  padding-inline-end: 3rem
   text-align: inherit
   white-space: nowrap
   width: 100%
