--- a/sass/components/level.sass
+++ b/sass/components/level.sass
@@ -22,7 +22,7 @@ $level-item-spacing: ($block-spacing * 0.5) !default
     .level-item
       &:not(:last-child)
         margin-bottom: 0
-        +ltr-property("margin", $level-item-spacing)
+        margin-inline-end: $level-item-spacing
       &:not(.is-narrow)
         flex-grow: 1
   // Responsiveness
@@ -59,7 +59,7 @@ $level-item-spacing: ($block-spacing * 0.5) !default
     // Responsiveness
     +tablet
       &:not(:last-child)
-        +ltr-property("margin", $level-item-spacing)
+        margin-inline-end: $level-item-spacing
 
 .level-left
   align-items: center
