--- a/sass/elements/notification.sass
+++ b/sass/elements/notification.sass
@@ -3,9 +3,8 @@
 $notification-background-color: $background !default
 $notification-code-background-color: $scheme-main !default
 $notification-radius: $radius !default
-$notification-padding: 1.25rem 2.5rem 1.25rem 1.5rem !default
-$notification-padding-ltr: 1.25rem 2.5rem 1.25rem 1.5rem !default
-$notification-padding-rtl: 1.25rem 1.5rem 1.25rem 2.5rem !default
+$notification-padding: 1.25rem !default
+$notification-padding-end: 2.5rem !default
 
 $notification-colors: $colors !default
 
@@ -14,10 +13,10 @@ $notification-colors: $colors !default
   background-color: $notification-background-color
   border-radius: $notification-radius
   position: relative
-  +ltr
-    padding: $notification-padding-ltr
-  +rtl
-    padding: $notification-padding-rtl
+  padding-top: $notification-padding
+  padding-bottom: $notification-padding
+  padding-inline-start: $notification-padding
+  padding-inline-end: $notification-padding-end
   a:not(.button):not(.dropdown-item)
     color: currentColor
     text-decoration: underline
@@ -29,7 +28,7 @@ $notification-colors: $colors !default
   pre code
     background: transparent
   & > .delete
-    +ltr-position(0.5rem)
+    inset-inline-end: 0.5rem
     position: absolute
     top: 0.5rem
   .title,
