--- a/docs/documentation/components/navbar.html
+++ b/docs/documentation/components/navbar.html
@@ -761,7 +761,7 @@ $(document).ready(function() {
 
 <div class="content">
   <p>
-    On desktop {% include bp/desktop.html %}, the <code>navbar-menu</code> will <strong>fill up the space</strong> available in the navbar, leaving the navbar brand just the space it needs. It needs, however, two elements as direct children:
+    On desktop {% include bp/desktop.html %}, the <code>navbar-menu</code> will <strong>fill up the space</strong> available in the navbar, leaving the navbar brand just the space it needs. however, two elements as direct children:
   </p>
   <ul>
     <li>
