removed deprecated code
removed `window.event`.
replaced `keyCode` with `code`.

--- a/docs/documentation/components/modal.html
+++ b/docs/documentation/components/modal.html
@@ -120,9 +120,7 @@ document.addEventListener('DOMContentLoaded', () => {
 
   // Add a keyboard event to close all modals
   document.addEventListener('keydown', (event) => {
-    const e = event || window.event;
-
-    if (e.keyCode === 27) { // Escape key
+    if (event.code === 'Escape') {
       closeAllModals();
     }
   });
