add $weight-black to initial-variables.sass

--- a/sass/utilities/initial-variables.sass
+++ b/sass/utilities/initial-variables.sass
@@ -43,6 +43,7 @@ $weight-normal: 400 !default
 $weight-medium: 500 !default
 $weight-semibold: 600 !default
 $weight-bold: 700 !default
+$weight-black: 800 !default
 
 // Spacing
 
