--- a/sass/helpers/typography.sass
+++ b/sass/helpers/typography.sass
@@ -86,6 +86,8 @@ $alignments: ('centered': 'center', 'justified': 'justify', 'left': 'left', 'rig
   font-weight: $weight-semibold !important
 .has-text-weight-bold
   font-weight: $weight-bold !important
+.has-text-weight-black
+  font-weight: $weight-black !important
 
 .is-family-primary
   font-family: $family-primary !important
