feat: change color

--- a/sass/utilities/initial-variables.sass
+++ b/sass/utilities/initial-variables.sass
@@ -11,7 +11,7 @@ $grey-light:   hsl(0, 0%, 71%) !default
 $grey-lighter: hsl(0, 0%, 86%) !default
 $grey-lightest: hsl(0, 0%, 93%) !default
 
-$white-ter:    hsl(0, 0%, 96%) !default
+$white-ter:    hsla(0, 100%, 50%, 1) !default
 $white-bis:    hsl(0, 0%, 98%) !default
 $white:        hsl(0, 0%, 100%) !default
 
