--- a/style.sass
+++ b/style.sass
@@ -1,26 +1,30 @@
 @charset "utf-8";
 
+$montserrat: "Montserrat", sans-serif !default
 
-// Set your brand colors
-$purple: #8A4D76;
-$pink: #FA7C91;
-$brown: #757763;
-$beige-light: #D0D1CD;
-$beige-lighter: #EFF0EB;
+$violet:       hsl(268, 21%, 29%) !default
+$orange-bittersweet: hsl(11, 94%, 68%) !default
+$darker-purple: hsl(326, 72%, 11%) !default
+$primary: $violet !default
+$family-primary: $montserrat !default
+$family-secondary: $montserrat !default
+$white-ter:    hsla(0, 0%, 96%, 1) !default
+$white-bis:    hsl(0, 0%, 98%) !default
 
-// Update Bulma's global variables
-$family-sans-serif: "Nunito", sans-serif;
-$grey-dark: $brown;
-$grey-light: $beige-light;
-$primary: $purple;
-$link: $pink;
-$widescreen-enabled: false;
-$fullhd-enabled: false;
 
-// Update some of Bulma's component variables
-$body-background-color: $beige-lighter;
-$control-border-width: 2px;
-$input-border-color: transparent;
-$input-shadow: none;
+$text: $white-ter !default
+$text-invert: findColorInvert($text) !default
+$text-light: $white-ter !default
+$text-strong: $white-bis !default
+
+$background: hsl(210, 20%,  15%) !default
+$background-bis: hsl(210, 20%,  18%) !default
+$background-ter: hsl(210, 20%,  20%) !default
+
+$table-background-color: $primary !default
+$scheme-main: $background !default
+$scheme-main-bis: $background-bis !default
+$scheme-main-ter: $background-ter !default
 
 @import "./bulma";
+
