--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,6 @@ fieldset[disabled] .pagination-ellipsis {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -moz-user-select: none;
-  -ms-user-select: none;
   user-select: none;
 }
 
@@ -100,7 +99,6 @@ fieldset[disabled] .pagination-ellipsis {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -moz-user-select: none;
-  -ms-user-select: none;
   user-select: none;
   -moz-appearance: none;
   -webkit-appearance: none;
@@ -322,7 +320,9 @@ html {
   overflow-x: hidden;
   overflow-y: scroll;
   text-rendering: optimizeLegibility;
-  text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+     -moz-text-size-adjust: 100%;
+          text-size-adjust: 100%;
 }
 
 article,
@@ -8853,6 +8853,7 @@ label.panel-block:hover {
   flex-basis: 0;
   flex-grow: 1;
   flex-shrink: 1;
+  min-height: -moz-min-content;
   min-height: min-content;
 }
 
@@ -11821,5 +11822,4 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
   background-color: #252e37;
   padding: 3rem 1.5rem 6rem;
 }
-
 /*# sourceMappingURL=style.css.map */
