--- a/style.sass
+++ b/style.sass
@@ -2,7 +2,7 @@
 
 $montserrat: "Montserrat", sans-serif !default
 
-$violet:       hsl(268, 21%, 29%) !default
+$violet:       #772ce8 !default
 $orange-bittersweet: hsl(11, 94%, 68%) !default
 $darker-purple: hsl(326, 72%, 11%) !default
 $primary: $violet !default
@@ -17,14 +17,38 @@ $text-invert: findColorInvert($text) !default
 $text-light: $white-ter !default
 $text-strong: $white-bis !default
 
-$background: hsl(210, 20%,  15%) !default
+$background: #0e0e10 !default
 $background-bis: hsl(210, 20%,  18%) !default
 $background-ter: hsl(210, 20%,  20%) !default
 
-$table-background-color: $primary !default
+$table-background-color: $background-ter !default
 $scheme-main: $background !default
 $scheme-main-bis: $background-bis !default
 $scheme-main-ter: $background-ter !default
+
+
+$table-container-max-height: 400px;
+$table-header-bg-color: white;
+
+
+.tableFixHead
+  overflow-y: auto
+  height: 75vh
+
+  thead th
+    position: sticky
+    top: 0px
+
+table
+  border-collapse: collapse
+  width: 100%
+
+th, td
+  padding: 8px 16px
+  border: 1px solid #ccc
+
+th
+  background: $background-ter
 
 @import "./bulma";
 
