Fix "missing href in anchor" linter errors

--- a/css/bulma.css
+++ b/css/bulma.css
@@ -6892,7 +6892,7 @@ label.panel-block:hover {
   white-space: nowrap;
 }
 
-.tabs a {
+.tabs a, .tabs button {
   align-items: center;
   border-bottom-color: #dbdbdb;
   border-bottom-style: solid;
@@ -6905,7 +6905,7 @@ label.panel-block:hover {
   vertical-align: top;
 }
 
-.tabs a:hover {
+.tabs a:hover, .tabs button:hover {
   border-bottom-color: #363636;
   color: #363636;
 }
@@ -6914,7 +6914,7 @@ label.panel-block:hover {
   display: block;
 }
 
-.tabs li.is-active a {
+.tabs li.is-active a, .tabs li.is-active button {
   border-bottom-color: #485fc7;
   color: #485fc7;
 }
@@ -6962,17 +6962,17 @@ label.panel-block:hover {
   justify-content: flex-end;
 }
 
-.tabs.is-boxed a {
+.tabs.is-boxed a, .tabs.is-boxed button {
   border: 1px solid transparent;
   border-radius: 4px 4px 0 0;
 }
 
-.tabs.is-boxed a:hover {
+.tabs.is-boxed a:hover, .tabs.is-boxed button:hover {
   background-color: whitesmoke;
   border-bottom-color: #dbdbdb;
 }
 
-.tabs.is-boxed li.is-active a {
+.tabs.is-boxed li.is-active a, .tabs.is-boxed li.is-active button {
   background-color: white;
   border-color: #dbdbdb;
   border-bottom-color: transparent !important;
@@ -6983,7 +6983,7 @@ label.panel-block:hover {
   flex-shrink: 0;
 }
 
-.tabs.is-toggle a {
+.tabs.is-toggle a, .tabs.is-toggle button {
   border-color: #dbdbdb;
   border-style: solid;
   border-width: 1px;
@@ -6991,7 +6991,7 @@ label.panel-block:hover {
   position: relative;
 }
 
-.tabs.is-toggle a:hover {
+.tabs.is-toggle a:hover, .tabs.is-toggle button:hover {
   background-color: whitesmoke;
   border-color: #b5b5b5;
   z-index: 2;
@@ -7001,17 +7001,17 @@ label.panel-block:hover {
   margin-left: -1px;
 }
 
-.tabs.is-toggle li:first-child a {
+.tabs.is-toggle li:first-child a, .tabs.is-toggle li:first-child button {
   border-top-left-radius: 4px;
   border-bottom-left-radius: 4px;
 }
 
-.tabs.is-toggle li:last-child a {
+.tabs.is-toggle li:last-child a, .tabs.is-toggle li:last-child button {
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
 }
 
-.tabs.is-toggle li.is-active a {
+.tabs.is-toggle li.is-active a, .tabs.is-toggle li.is-active button {
   background-color: #485fc7;
   border-color: #485fc7;
   color: #fff;
@@ -7022,13 +7022,13 @@ label.panel-block:hover {
   border-bottom: none;
 }
 
-.tabs.is-toggle.is-toggle-rounded li:first-child a {
+.tabs.is-toggle.is-toggle-rounded li:first-child a, .tabs.is-toggle.is-toggle-rounded li:first-child button {
   border-bottom-left-radius: 9999px;
   border-top-left-radius: 9999px;
   padding-left: 1.25em;
 }
 
-.tabs.is-toggle.is-toggle-rounded li:last-child a {
+.tabs.is-toggle.is-toggle-rounded li:last-child a, .tabs.is-toggle.is-toggle-rounded li:last-child button {
   border-bottom-right-radius: 9999px;
   border-top-right-radius: 9999px;
   padding-right: 1.25em;
