--- a/sass/components/tabs.sass
+++ b/sass/components/tabs.sass
@@ -39,7 +39,7 @@ $tabs-toggle-link-active-color: $link-invert !default
   overflow: hidden
   overflow-x: auto
   white-space: nowrap
-  a
+  a, button
     align-items: center
     border-bottom-color: $tabs-border-bottom-color
     border-bottom-style: $tabs-border-bottom-style
@@ -56,7 +56,7 @@ $tabs-toggle-link-active-color: $link-invert !default
   li
     display: block
     &.is-active
-      a
+      a, button
         border-bottom-color: $tabs-link-active-border-bottom-color
         color: $tabs-link-active-color
   ul
@@ -92,7 +92,7 @@ $tabs-toggle-link-active-color: $link-invert !default
       justify-content: flex-end
   // Styles
   &.is-boxed
-    a
+    a, button
       border: 1px solid transparent
       +ltr
         border-radius: $tabs-boxed-link-radius $tabs-boxed-link-radius 0 0
@@ -103,7 +103,7 @@ $tabs-toggle-link-active-color: $link-invert !default
         border-bottom-color: $tabs-boxed-link-hover-border-bottom-color
     li
       &.is-active
-        a
+        a, button
           background-color: $tabs-boxed-link-active-background-color
           border-color: $tabs-boxed-link-active-border-color
           border-bottom-color: $tabs-boxed-link-active-border-bottom-color !important
@@ -112,7 +112,7 @@ $tabs-toggle-link-active-color: $link-invert !default
       flex-grow: 1
       flex-shrink: 0
   &.is-toggle
-    a
+    a, button
       border-color: $tabs-toggle-link-border-color
       border-style: $tabs-toggle-link-border-style
       border-width: $tabs-toggle-link-border-width
@@ -125,14 +125,14 @@ $tabs-toggle-link-active-color: $link-invert !default
     li
       & + li
         +ltr-property("margin", -#{$tabs-toggle-link-border-width}, false)
-      &:first-child a
+      &:first-child a, &:first-child button
         +ltr
           border-top-left-radius: $tabs-toggle-link-radius
           border-bottom-left-radius: $tabs-toggle-link-radius
         +rtl
           border-top-right-radius: $tabs-toggle-link-radius
           border-bottom-right-radius: $tabs-toggle-link-radius
-      &:last-child a
+      &:last-child a, &:last-child button
         +ltr
           border-top-right-radius: $tabs-toggle-link-radius
           border-bottom-right-radius: $tabs-toggle-link-radius
@@ -140,7 +140,7 @@ $tabs-toggle-link-active-color: $link-invert !default
           border-top-left-radius: $tabs-toggle-link-radius
           border-bottom-left-radius: $tabs-toggle-link-radius
       &.is-active
-        a
+        a, button
           background-color: $tabs-toggle-link-active-background-color
           border-color: $tabs-toggle-link-active-border-color
           color: $tabs-toggle-link-active-color
@@ -149,7 +149,7 @@ $tabs-toggle-link-active-color: $link-invert !default
       border-bottom: none
     &.is-toggle-rounded
       li
-        &:first-child a
+        &:first-child a, &:first-child button
           +ltr
             border-bottom-left-radius: $radius-rounded
             border-top-left-radius: $radius-rounded
@@ -158,7 +158,7 @@ $tabs-toggle-link-active-color: $link-invert !default
             border-bottom-right-radius: $radius-rounded
             border-top-right-radius: $radius-rounded
             padding-right: 1.25em
-        &:last-child a
+        &:last-child a, &:last-child button
           +ltr
             border-bottom-right-radius: $radius-rounded
             border-top-right-radius: $radius-rounded
