change style of is_light button when is loading

--- a/sass/elements/button.sass
+++ b/sass/elements/button.sass
@@ -247,6 +247,9 @@ $button-responsive-sizes: ("mobile": ("small": ($size-small * 0.75), "normal": (
             background-color: bulmaDarken($color-light, 5%)
             border-color: transparent
             color: $color-dark
+          &.is-loading
+            &::after
+              border-color: transparent transparent $color $color !important              
   // Sizes
   &.is-small
     +button-small
